--- a/portfolio.html
+++ b/portfolio.html
@@ -83,7 +83,7 @@
             <div class="shadowBox">
             </div>
             <div class="textBox">
-                <p><br><br>A hilarious iron pickaxe.</p>
+                <p><br><br>A hilarious iron pickaxe. Your grandfather quit his job unannounced (he died) and was buried with his pickaxe. This angered management and was against company policy, so they reclaimed the company property and assigned it to you.</p>
             </div>
             <div class="imageBox">
                 <img src="images/showcaseImgs/IronPick.png" alt="Iron pickaxe" height="100%" width="100%">
