--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
   <link rel="icon" href="/favicon.ico?v=20250830-1" />
   <style>
     :root {
-      --bg: #0b1020; /* deep slate */
+      --bg: #0b1020;
       --panel: #111630;
       --text: #e5e7eb;
       --muted: #94a3b8;
-      --brand: #60a5fa; /* sky */
-      --accent: #f97316; /* orange */
+      --brand: #60a5fa;
+      --accent: #f97316;
       --ring: rgba(99, 102, 241, .5);
     }
     * { box-sizing: border-box; }
@@ -130,8 +130,7 @@
       </div>
       <div class="mock">
         <div class="badge">Preview: The Labyrinth Experience</div>
-        <!-- Drop a 1200x750 promo image into /public and swap the src below -->
-        <img id="promo" src="Images/TempImage.png?v=20250830-1" alt="Latest release promo" style="max-width:100%; max-height:100%; object-fit:cover;" />
+        <img id="promo" src="Images/TempImage.png?v=20250830-2" alt="Latest release promo" style="max-width:100%; max-height:100%; object-fit:cover;" />
       </div>
     </section>
 
@@ -144,7 +143,7 @@
             rel="noopener" 
             aria-label="Open game" 
             style="display:block; width:300px; aspect-ratio:16/9; border-radius:12px; overflow:hidden;">
-            <img src="images/NukeGame.png?v=20250830-1" 
+            <img src="Images/NukeGame.png?v=20250830-1" 
                  alt="Build a Nuke Factory and Destroy the World Tycoon" 
                  style="width:100%; height:100%; object-fit:cover; display:block; border-radius:inherit;">
           </a>
@@ -176,7 +175,7 @@
 
   <script>
     // ---- QUICK CONFIG (edit and publish) ----
-    const VERSION = '20250830-1';
+    const VERSION = '20250830-2';
 
     const CONFIG = {
       announceLive: true,
@@ -187,7 +186,7 @@
         status: "Status: Building",
         playUrl: "https://www.roblox.com/games/0000000",
         trailerUrl: "https://youtu.be/",
-        promoSrc: "promo-placeholder.jpg?v=" + VERSION
+        promoSrc: "Images/TempImage.png?v=" + VERSION
       }
     };
 
